--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,33 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .container {
   margin: 0 auto;
 }
 
+h1 {
+  color: #fff;
+  font-weight: 700;
+}
+
+.lead {
+  color: #fff;
+  font-weight: 700;
+}
+
+.btn span {
+  font-weight: 600;
+}
+
+.contactForm {
+  background-color: #fff;
+}
+
+.trial {
+  text-transform: uppercase;
+}
 .attribution {
   font-size: 11px;
   text-align: center;
